homepage and login page setup

--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,1 +1,22 @@
-<h1>In the rooot path</h1>
+<div class="header">
+	<h1>CHAT APP</h1>
+</div>
+
+<div class="chat-body">
+	<div class="msg-box">
+		<div>
+			<em>user1: </em> hi..
+		</div>
+		<div>
+			<em>user2: </em> hello
+		</div>
+		<div>
+			<em>user3: </em> hey!!
+		</div>
+	</div>
+
+	
+	<div class="status-box">
+		
+	</div>
+</div>
