--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,12 +7,13 @@
 
 
 .navbar{
-	height: 50px;
+	height: 60px;
 	background-color : black;
 	display: flex;
 	align-items :center;
 	justify-content : space-between;
-	padding: 25px;
+	padding: 35px;
+	font-size: 20px;
 }
 
 .left-elements, .right-elements{
@@ -39,3 +40,72 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+.header{
+	margin-top: 25px;
+	height: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.header h1{
+	text-align:center;
+	font-size:45px;
+}
+
+.chat-body{
+	padding: 0 25px 0 25px;
+	display: flex;
+	align-items :center;
+	justify-content : space-between;
+}
+.msg-box{
+	height: 450px;
+	width: 70%;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.status-box{
+	height: 450px;
+	width: 25%;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+.form-body{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-direction:column;
+	padding:70px;
+	width:100%;
+	height:350px;
+}
+
+.field-name{
+	font-size: 25px;
+	margin-bottom: 20px;
+}
+
+.field{
+	height: 35px;
+	font-size: 20px;
+}
+
+.btn-submit{
+	width:100%;
+	height:40px;
+	margin-top: 20px;
+	font-size: 20px;
+}
+
+.btn-submit:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+.btn-submit:hover {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
