--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,13 +1,12 @@
 <div class="navbar">
       
       <div class="left-elements">
-        <a href="#">Home</a>
-        <a href="#">Messages</a>
+        <%= link_to "Home", root_path%>
+        <%= link_to "Messages", root_path%>
       </div>
       <div class="right-elements">
-        <a href="#">login</a>
-        <a href="#">aaa</a>
-        <a href="#">Signup</a>
+        <%= link_to "Login", login_path %>
+        <%= link_to "Sign up", root_path%>
       </div>
 
 
