--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MessageMe</title>
+    <title>Chat</title>
      <%= favicon_link_tag asset_path('favicon.ico') %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -13,7 +13,7 @@
 
   <body>
 
-    <%= render 'layouts/navigation' %>
-    <%= yield %>
+      <%= render 'layouts/navigation' %>
+      <%= yield %>
   </body>
 </html>
